packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_optimization_issue_4386.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 629
expression: output
---
==INPUT==


import { component$ } from '@khulnasoft.com/unisynth';

export const FOO_MAPPING = {
    A: 1,
    B: 2,
    C: 3,
  };

  export default component$(() => {
    const key = 'A';
    const value = FOO_MAPPING[key];

    return <>{value}</>;
  });

============================= test.jsx ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { inlinedQrl } from "@khulnasoft.com/unisynth";
export const FOO_MAPPING = {
    A: 1,
    B: 2,
    C: 3
};
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
    return <>{FOO_MAPPING['A']}</>;
}, "test_component_LUXeXe0DQrg"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,cAAc;IACvB,GAAG;IACH,GAAG;IACH,GAAG;AACL,EAAE;AAEF,6BAAe,sCAAW;IAIxB,UAFc,WAAW,CADb,IACkB;AAGhC,kCAAG\"}")
== DIAGNOSTICS ==

[]
