packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_preserve_filenames.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 2568
expression: output
---
==INPUT==


import { component$, useStore } from '@khulnasoft.com/unisynth';

export const App = component$((props) => {
    return (
        <Cmp>
            <p class="stuff" onClick$={() => console.log('warn')}>Hello Unisynth</p>
        </Cmp>
    );
});

============================= test.tsx ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { inlinedQrl } from "@khulnasoft.com/unisynth";
import { _jsxQ } from "@khulnasoft.com/unisynth";
import { _jsxC } from "@khulnasoft.com/unisynth";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
    return /*#__PURE__*/ _jsxC(Cmp, {
        children: /*#__PURE__*/ _jsxQ("p", null, {
            class: "stuff",
            onClick$: /*#__PURE__*/ inlinedQrl(()=>console.log('warn'), "App_component_Cmp_p_onClick_vuXzfUTkpto")
        }, "Hello Unisynth", 3, null)
    }, 3, "u6_0");
}, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AAGA,OAAO,MAAM,oBAAM,sCAAW,CAAC;IAC3B,qBACI,MAAC;kBACG,cAAA,MAAC;YAAE,OAAM;YAAQ,QAAQ,2BAAE,IAAM,QAAQ,GAAG,CAAC;WAAS;;AAGlE,iCAAG\"}")
== DIAGNOSTICS ==

[]
