packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_preserve_filenames_segments.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 2592
expression: output
---
==INPUT==


import { component$, useStore } from '@khulnasoft.com/unisynth';

export const App = component$((props: Stuff) => {
    foo();
    return (
        <Cmp>
            <p class="stuff" onClick$={() => console.log('warn')}>Hello Unisynth</p>
        </Cmp>
    );
});

export const foo = () => console.log('foo');

============================= test.tsx ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0.js"), "App_component_ckEPmXZlub0"));
export const foo = ()=>console.log('foo');


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,oHAOhB;AAEH,OAAO,MAAM,MAAM,IAAM,QAAQ,GAAG,CAAC,OAAO\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxC } from "@khulnasoft.com/unisynth";
import { _jsxQ } from "@khulnasoft.com/unisynth";
import { foo } from "./test.tsx";
import { qrl } from "@khulnasoft.com/unisynth";
export const App_component_ckEPmXZlub0 = (props)=>{
    foo();
    return /*#__PURE__*/ _jsxC(Cmp, {
        children: /*#__PURE__*/ _jsxQ("p", null, {
            class: "stuff",
            onClick$: /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_Cmp_p_onClick_vuXzfUTkpto.js"), "App_component_Cmp_p_onClick_vuXzfUTkpto")
        }, "Hello Unisynth", 3, null)
    }, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;yCAG8B,CAAC;IAC3B;IACA,qBACI,MAAC;kBACG,cAAA,MAAC;YAAE,OAAM;YAAQ,QAAQ;WAA6B;;AAGlE\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    90,
    252
  ]
}
*/
============================= test.tsx_App_component_Cmp_p_onClick_vuXzfUTkpto.js (ENTRY POINT)==

export const App_component_Cmp_p_onClick_vuXzfUTkpto = ()=>console.log('warn');


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\"uDAOuC,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_Cmp_p_onClick_vuXzfUTkpto",
  "entry": null,
  "displayName": "test.tsx_App_component_Cmp_p_onClick",
  "hash": "vuXzfUTkpto",
  "canonicalFilename": "test.tsx_App_component_Cmp_p_onClick_vuXzfUTkpto",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    187,
    212
  ]
}
*/
== DIAGNOSTICS ==

[]
