packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_reg_ctx_name_segments.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 754
expression: output
---
==INPUT==


import { $, component$, server$ } from '@khulnasoft.com/unisynth';
import { foo } from './foo';
export const Works = component$((props) => {
    const text = 'hola';
    return (
        <>
        <div onClick$={server$(() => console.log('in server', text))}></div>
        <div onClick$={() => foo()}></div>
        </>
    );
});

============================= test.js ==

import "./foo";
import { componentQrl } from "@khulnasoft.com/unisynth";
import { serverQrl } from "@khulnasoft.com/unisynth";
import { _regSymbol } from "@khulnasoft.com/unisynth";
import { inlinedQrl } from "@khulnasoft.com/unisynth";
import { _jsxQ } from "@khulnasoft.com/unisynth";
import { _noopQrl } from "@khulnasoft.com/unisynth";
import { _jsxC } from "@khulnasoft.com/unisynth";
import { Fragment as _Fragment } from "@khulnasoft.com/unisynth/jsx-runtime";
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxQ("div", {
                onClick$: serverQrl(/*#__PURE__*/ inlinedQrl(/*#__PURE__*/ _regSymbol(()=>console.log('in server', 'hola'), "gcSPFNpGYgg"), "Works_component_Fragment_div_onClick_server_gcSPFNpGYgg"))
            }, null, null, 2, null),
            /*#__PURE__*/ _jsxQ("div", null, {
                onClick$: /*#__PURE__*/ _noopQrl("Works_component_Fragment_div_onClick_nO4DPVZWP7g")
            }, null, 3, null)
        ]
    }, 1, "u6_0");
}, "Works_component_t45qL4vNGv0"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;AAGA,OAAO,MAAM,sBAAQ,sCAAW,CAAC;IAE7B,qBACI;;0BACA,MAAC;gBAAI,UAAU,4DAAQ,IAAM,QAAQ,GAAG,CAAC,aAHhC;;0BAIT,MAAC;gBAAI,QAAQ;;;;AAGrB,mCAAG\"}")
== DIAGNOSTICS ==

[]
