packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_server_auth.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 1766
expression: output
---
==INPUT==


import GitHub from '@auth/core/providers/github'
import Facebook from 'next-auth/providers/facebook'
import Google from 'next-auth/providers/google'
import {serverAuth$, auth$} from '@auth/qwik';

export const { onRequest, logout, getSession, signup } = serverAuth$({
    providers: [
    GitHub({
        clientId: process.env.GITHUB_ID,
        clientSecret: process.env.GITHUB_SECRET
    }),
    Facebook({
        clientId: import.meta.env.FACEBOOK_ID,
        clientSecret: import.meta.env.FACEBOOK_SECRET
    }),
    Google({
        clientId: process.env.GOOGLE_ID,
        clientSecret: process.env.GOOGLE_SECRET
    })
    ]
});

export const { onRequest, logout, getSession, signup } = auth$({
    providers: [
    GitHub({
        clientId: process.env.GITHUB_ID,
        clientSecret: process.env.GITHUB_SECRET
    }),
    Facebook({
        clientId: process.env.FACEBOOK_ID,
        clientSecret: process.env.FACEBOOK_SECRET
    }),
    Google({
        clientId: process.env.GOOGLE_ID,
        clientSecret: process.env.GOOGLE_SECRET
    })
    ]
});

============================= test.js ==

import { serverAuthQrl } from "@auth/qwik";
import { qrl } from "@khulnasoft.com/unisynth";
import { authQrl } from "@auth/qwik";
export const { onRequest, logout, getSession, signup } = serverAuthQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_serverAuth_qVqpX2a0p9Y"), "serverAuth_qVqpX2a0p9Y"));
export const { onRequest, logout, getSession, signup } = authQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_auth_GU0aY5QCETY"), "auth_GU0aY5QCETY"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AAMA,OAAO,MAAM,EAAE,SAAS,EAAE,MAAM,EAAE,UAAU,EAAE,MAAM,EAAE,GAAG,4GAetD;AAEH,OAAO,MAAM,EAAE,SAAS,EAAE,MAAM,EAAE,UAAU,EAAE,MAAM,EAAE,GAAG,0FAetD\"}")
============================= test.tsx_auth_GU0aY5QCETY.js (ENTRY POINT)==

import Facebook from "next-auth/providers/facebook";
import GitHub from "@auth/core/providers/github";
import Google from "next-auth/providers/google";
export const auth_GU0aY5QCETY = {
    providers: [
        GitHub({
            clientId: process.env.GITHUB_ID,
            clientSecret: process.env.GITHUB_SECRET
        }),
        Facebook({
            clientId: process.env.FACEBOOK_ID,
            clientSecret: process.env.FACEBOOK_SECRET
        }),
        Google({
            clientId: process.env.GOOGLE_ID,
            clientSecret: process.env.GOOGLE_SECRET
        })
    ]
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;gCAuB+D;IAC3D,WAAW;QACX,OAAO;YACH,UAAU,QAAQ,GAAG,CAAC,SAAS;YAC/B,cAAc,QAAQ,GAAG,CAAC,aAAa;QAC3C;QACA,SAAS;YACL,UAAU,QAAQ,GAAG,CAAC,WAAW;YACjC,cAAc,QAAQ,GAAG,CAAC,eAAe;QAC7C;QACA,OAAO;YACH,UAAU,QAAQ,GAAG,CAAC,SAAS;YAC/B,cAAc,QAAQ,GAAG,CAAC,aAAa;QAC3C;KACC;AACL\"}")
/*
{
  "origin": "test.tsx",
  "name": "auth_GU0aY5QCETY",
  "entry": null,
  "displayName": "test.tsx_auth",
  "hash": "GU0aY5QCETY",
  "canonicalFilename": "test.tsx_auth_GU0aY5QCETY",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "auth$",
  "captures": false,
  "loc": [
    704,
    1065
  ]
}
*/
============================= test.tsx_serverAuth_qVqpX2a0p9Y.js (ENTRY POINT)==

import Facebook from "next-auth/providers/facebook";
import GitHub from "@auth/core/providers/github";
import Google from "next-auth/providers/google";
export const serverAuth_qVqpX2a0p9Y = {
    providers: [
        GitHub({
            clientId: process.env.GITHUB_ID,
            clientSecret: process.env.GITHUB_SECRET
        }),
        Facebook({
            clientId: import.meta.env.FACEBOOK_ID,
            clientSecret: import.meta.env.FACEBOOK_SECRET
        }),
        Google({
            clientId: process.env.GOOGLE_ID,
            clientSecret: process.env.GOOGLE_SECRET
        })
    ]
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;sCAMqE;IACjE,WAAW;QACX,OAAO;YACH,UAAU,QAAQ,GAAG,CAAC,SAAS;YAC/B,cAAc,QAAQ,GAAG,CAAC,aAAa;QAC3C;QACA,SAAS;YACL,UAAU,YAAY,GAAG,CAAC,WAAW;YACrC,cAAc,YAAY,GAAG,CAAC,eAAe;QACjD;QACA,OAAO;YACH,UAAU,QAAQ,GAAG,CAAC,SAAS;YAC/B,cAAc,QAAQ,GAAG,CAAC,aAAa;QAC3C;KACC;AACL\"}")
/*
{
  "origin": "test.tsx",
  "name": "serverAuth_qVqpX2a0p9Y",
  "entry": null,
  "displayName": "test.tsx_serverAuth",
  "hash": "qVqpX2a0p9Y",
  "canonicalFilename": "test.tsx_serverAuth_qVqpX2a0p9Y",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "serverAuth$",
  "captures": false,
  "loc": [
    268,
    637
  ]
}
*/
== DIAGNOSTICS ==

[]
